
0.0.4 - 
 * Added text to welcome page

0.0.3 - 07 Feb 2012
 * Set large popup style as default for new installs

0.0.2 - 05 Feb 2012

 * Initial revision 